Implement reward factors, global and per skill

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,72 +1,86 @@
+RewardFactors: [ 1, 1, 1 ]
 brawl:
+  RewardFactors: [ 1, 1, 1 ]
   DisplayName: Brawling
   Shorthand: Brawl
   Description: Fight hostile monsters in close combat, ideally with your sword.
 breed:
+  RewardFactors: [ 1, 1, 1 ]
   DisplayName: Breeding
   Shorthand: Breed
   Description: Feed your farm animals to make them breed and increase their numbers.
 brew:
+  RewardFactors: [ 1, 1, 1 ]
   DisplayName: Brewing
   Shorthand: Brew
   Description: Brew magic potions in the brewing stand to achieve epic effects or wreak havoc on your enemies.
 build:
+  RewardFactors: [ 1, 1, 1 ]
   DisplayName: Building
   Shorthand: Build
   Description: Place blocks in the world to make your own epic creations.
 butcher:
+  RewardFactors: [ 1, 1, 1 ]
   DisplayName: Butchery
   Shorthand: Butcher
   Description: Butcher your farm animals to harvest their precious drops.
 cook:
+  RewardFactors: [ 1, 1, 1 ]
   DisplayName: Cooking
   Shorthand: Cook
   Description: Prepare your meals in the oven to increase their effectiveness and tase.
 dig:
+  RewardFactors: [ 1, 1, 1 ]
   DisplayName: Digging
   Shorthand: Dig
   Description: Use your shovel to dig in the ground and find epic treasure hidden beneath.
 eat:
+  RewardFactors: [ 1, 1, 1 ]
   DisplayName: Eating
   Shorthand: Eat
   Description: Eat healthy and tasty food to maintain your stamina, heal up and refresh.
 enchant:
+  RewardFactors: [ 1, 1, 1 ]
   DisplayName: Enchanting
   Shorthand: Enchant
   Description: Improve your weapons, tools and armor on the enchanting table to make them stronger, more effective and deadlier.
 fish:
+  RewardFactors: [ 1, 1, 1 ]
   DisplayName: Fishing
   Shorthand: Fish
   Description: Cast your fishing rod in bodies of water to catch different types of fish for food or brewing.
 harvest:
+  RewardFactors: [ 1, 1, 1 ]
   DisplayName: Harvesting
   Shorthand: Harvest
   Description: Reap the rewards of your hard gardening work by harvesting cereal, fruit and vegetables.
 hunt:
+  RewardFactors: [ 1, 1, 1 ]
   DisplayName: Hunting
   Shorthand: Hunt
   Description: Snipe dangerous creatures from afar with your bow to stay out of harms way.
 mine:
+  RewardFactors: [ 1, 1, 1 ]
   DisplayName: Mining
   Shorthand: Mine
   Description: Grab your pickaxe and descend into the deep mines of this world to find precious ores and rare gems.
-quaff:
-  DisplayName: Quaffing
-  Shorthand: Quaff
-  Description: Drink powerful potions to make you stronger, faster or deadlier.
 sacrifice:
+  RewardFactors: [ 1, 1, 1 ]
   DisplayName: Sacrifice
   Shorthand: Sacrifice
   Description: Sacrifice your precious offerings to the almighty Creeper Overlord in exchange for his blessing.
 smelt:
+  RewardFactors: [ 1, 1, 1 ]
   DisplayName: Smelting
   Shorthand: Smelt
   Description: Refine your ores and raw materials in a furnace to make them even more precious and useful.
 travel:
+  RewardFactors: [ 1, 1, 1 ]
   DisplayName: Traveling
   Shorthand: Travel
   Description: Leave your home and travel out in the world on foot, boat, or horseback to explore the wide world of Winthier.
 woodcut:
+  RewardFactors: [ 1, 1, 1 ]
   DisplayName: Woodcutting
   Shorthand: Woodcut
   Description: Grab your axe and cut down trees to collect lumber for your building projects.
