Add Blacksmith skill

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,4 +1,9 @@
 RewardFactors: [ 1, .5, 1 ]
+blacksmith:
+  RewardFactors: [ 1, 1, 1 ]
+  DisplayName: Blacksmithing
+  Shorthand: Blacksmith
+  Description: Repair, refine or rename items on an anvil.
 brawl:
   RewardFactors: [ 1, 1, 1 ]
   DisplayName: Brawling
