--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -95,6 +95,9 @@ travel:
   DisplayName: Traveling
   Shorthand: Travel
   Description: Leave your home and travel out in the world on foot, boat, or horseback to explore the wide world of Winthier.
+  DistanceStep: 16
+  MaxTeleportDistance: 128
+  MaxDistanceNoProgress: 96
 woodcut:
   RewardFactors: [ 1, 1, 1 ]
   DisplayName: Woodcutting
