--- a/pom.xml
+++ b/pom.xml
@@ -33,8 +33,8 @@
     <!-- Spigot-API -->
     <dependency>
       <groupId>org.spigotmc</groupId>
-      <artifactId>spigot</artifactId>
-      <version>1.8.7-R0.1-SNAPSHOT</version>
+      <artifactId>spigot-api</artifactId>
+      <version>1.9-R0.1-SNAPSHOT</version>
     </dependency>
     <!-- Lombok -->
     <dependency>
@@ -62,6 +62,13 @@
       <groupId>com.winthier.playercache</groupId>
       <artifactId>playercache</artifactId>
       <version>0.1</version>
+      <scope>provided</scope>
+    </dependency>
+    <!-- Apache Commons Lang3 -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.4</version>
       <scope>provided</scope>
     </dependency>
   </dependencies>
