--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,13 @@
       <version>0.1</version>
       <scope>provided</scope>
     </dependency>
+    <!-- SQL -->
+    <dependency>
+      <groupId>com.winthier.sql</groupId>
+      <artifactId>sql</artifactId>
+      <version>0.1</version>
+      <scope>provided</scope>
+    </dependency>
     <!-- Apache Commons Lang3 -->
     <dependency>
       <groupId>org.apache.commons</groupId>
