--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@ name: Skills
 description: Skills system for Winthier
 author: StarTux
 version: 0.4
-main: com.winthier.skills.bukkit.SkillsPlugin
+main: com.winthier.skills.SkillsPlugin
 depend: [ SQL, Vault, Exploits, PlayerCache ]
 commands: {}
 permissions:
