--- a/src/main/resources/anvil_recipes.yml
+++ b/src/main/resources/anvil_recipes.yml
@@ -1,10 +1,14 @@
 AnvilRecipes:
 - inputA: [oxhide, 1]
   inputB: [oxhide, 1]
-  output: [leather_scraps, 1]
+  output: [tanned_leather, 1]
 
 - inputA: pigskin
   inputB: pigskin
+  output: tanned_leather
+
+- inputA: tanned_leather
+  inputB: tanned_leather
   output: leather_scraps
 
 - inputA: leather_scraps
