Update for 1.13 (snapshot)

--- a/pom.xml
+++ b/pom.xml
@@ -22,10 +22,7 @@
     <dependency>
       <groupId>org.spigotmc</groupId>
       <artifactId>spigot-api</artifactId>
-      <version>1.12.2-R0.1-SNAPSHOT</version>
-      <!-- <groupId>org.bukkit</groupId> -->
-      <!-- <artifactId>bukkit</artifactId> -->
-      <!-- <version>18w15a-R0.1-SNAPSHOT</version> -->
+      <version>1.13-pre7-R0.1-SNAPSHOT</version>
     </dependency>
     <!-- Lombok -->
     <dependency>
