--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,6 +2,7 @@ name: Skills
 description: Skills system for Winthier
 author: StarTux
 version: 0.4
+api-version: 1.13
 main: com.winthier.skills.SkillsPlugin
 depend: [ SQL, Exploits, PlayerCache, Custom ]
 permissions:
