--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>com.winthier.skills</groupId>
   <artifactId>skills</artifactId>
   <packaging>jar</packaging>
-  <version>0.1</version>
+  <version>0.4-SNAPSHOT</version>
   <name>Skills</name>
   <url>http://www.winthier.com</url>
   <properties>
@@ -26,7 +26,7 @@
     <dependency>
       <groupId>org.spigotmc</groupId>
       <artifactId>spigot-api</artifactId>
-      <version>1.13-pre7-R0.1-SNAPSHOT</version>
+      <version>1.13-R0.1-SNAPSHOT</version>
     </dependency>
     <!-- Lombok -->
     <dependency>
