--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,7 @@ description: Skills system for Winthier
 author: StarTux
 version: 0.4
 api-version: 1.13
+website: https://cavetale.com
 main: com.winthier.skills.SkillsPlugin
 depend: [ SQL, Exploits, PlayerCache, Custom ]
 permissions:
